[package]
name = "equa-map"
version = "0.1.0"
edition = "2021"
[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"
[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin14-clang"
ar = "x86_64-apple-darwin14-ar"